<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_24dp"
        android:title="@string/title_profile"
        android:iconTint="@color/appGreen"
        tools:ignore="UnusedAttribute" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message_24dp"
        android:title="@string/title_messages"
        android:iconTint="@color/appGreen"
        tools:ignore="UnusedAttribute"/>

    <item
        android:id="@+id/navigation_users"
        android:icon="@drawable/ic_users_24dp"
        android:title="@string/users"
        android:iconTint="@color/appGreen"
        tools:ignore="UnusedAttribute"/>

</menu>
