<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_messages">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.click.ui.profile.View.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.click.ui.messages.View.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.click.ui.Discover.View.DiscoverFragment"
        android:label="@string/users"
        tools:layout="@layout/fragment_discover" />

</navigation>