<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Registration.View.Register"
    android:background="@color/home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/home">

        <RelativeLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/bar"
            android:padding="8dp"
            android:layout_alignParentTop="true"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_alignParentEnd="true"
                tools:ignore="RelativeOverlap"
                android:layout_alignParentRight="true"
                style="@style/TextViewStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                style="@style/TextViewStyle"
                android:text="@string/register"
                android:layout_centerInParent="true"/>

            <ImageView
                android:id="@+id/ivBackLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back_24dp"
                android:layout_alignParentStart="true"
                tools:ignore="ContentDescription"
                android:layout_alignParentLeft="true" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/ProgressRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/topBar"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_your"
                style="@style/TextViewStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/account"
                style="@style/TextViewStyle" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            tools:ignore="UselessLeaf,UselessParent"
            android:layout_margin="4dp"
            android:padding="16dp"
            android:layout_below="@id/topBar">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivRegisterProfileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/appGreen"
                android:background="@drawable/ic_profile_24dp" />

            <EditText
                android:id="@+id/etBioRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:lines="3"
                android:padding="8dp"
                android:gravity="center"
                android:hint="@string/write_something_about_your_self"
                android:importantForAutofill="no"
                style="@style/EditTextStyle"/>

            <EditText
                android:id="@+id/etNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/your_name"
                android:importantForAutofill="no"
                style="@style/EditTextStyle"/>

            <EditText
                android:id="@+id/etEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/your_e_mail"
                android:importantForAutofill="no"
                style="@style/EditTextStyle"/>

            <EditText
                android:id="@+id/etPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/your_password"
                android:importantForAutofill="no"
                style="@style/EditTextStyle"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:weightSum="2"
                android:id="@+id/radioGroupGender"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:id="@+id/radioMale"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    style="@style/TextViewStyle"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:padding="8dp"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:id="@+id/radioFemale"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    style="@style/TextViewStyle"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:padding="8dp"/>
            </RadioGroup>

            <RelativeLayout
                android:id="@+id/country_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:focusable="true"
                android:padding="8dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/tvSelectedCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:text="@string/select_country"
                    style="@style/TextViewStyle"
                    tools:ignore="RelativeOverlap"
                    android:layout_centerVertical="true"
                    android:padding="8dp"/>

                <ImageView
                    android:id="@+id/ivShowDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:focusable="false"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_keyboard_arrow_down_white_24dp"
                    android:layout_alignParentRight="true"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black"
                    android:layout_below="@id/ivShowDialog"
                    android:padding="2dp"/>

            </RelativeLayout>


            <Button
                android:id="@+id/btnJoinUs"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/register"
                android:importantForAutofill="no"
                style="@style/ButtonStyle"/>

        </LinearLayout>

    </RelativeLayout>


</ScrollView>