<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/darkGreen"
    app:cardBackgroundColor="@color/bar"
    app:cardCornerRadius="16dp"
    app:cardElevation="7dp"
    android:padding="4dp"
    android:layout_margin="4dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/darkGreen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/appGreen"
            android:textSize="20sp"
            android:text="@string/sort_by"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:id="@+id/sortBy"/>

        <CheckBox
            android:id="@+id/NoFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sortBy"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/sortBy"
            android:layout_toRightOf="@id/sortBy"
            android:padding="8dp"
            android:text="@string/no_filter"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/onlineFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:layout_below="@id/NoFilter"
            android:layout_toEndOf="@id/sortBy"
            android:layout_toRightOf="@id/sortBy" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/onlineFilter"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/sortBy"
            android:layout_toRightOf="@id/sortBy"
            android:id="@+id/countryFilter">

            <CheckBox
                android:id="@+id/countryFilterAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_countries"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:padding="8dp" />

            <RelativeLayout
                android:id="@+id/country_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:focusable="true">

                <TextView
                    android:id="@+id/tvSelectedCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:text="@string/select_country"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap"
                    android:layout_centerVertical="true"
                    android:padding="8dp"/>

                <ImageView
                    android:id="@+id/ivShowDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:focusable="false"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_keyboard_arrow_down_white_24dp"
                    android:layout_alignParentRight="true"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:weightSum="3"
            android:id="@+id/radioGroupGender"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_below="@id/countryFilter">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:id="@+id/radioMale"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:padding="8dp"
                android:textColor="@color/red"
                android:textStyle="bold"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:id="@+id/radioFemale"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:padding="8dp"
                android:textColor="@color/red"
                android:textStyle="bold"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/both"
                android:id="@+id/radioBoth"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:padding="8dp"
                android:textColor="@color/red"
                android:textStyle="bold"/>
        </RadioGroup>


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/searchFilter"
            android:layout_below="@id/radioGroupGender"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_search_24dp"
            tools:ignore="ContentDescription"
            android:layout_marginTop="8dp"
            />
    </RelativeLayout>


</androidx.cardview.widget.CardView>