<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Splash">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/baseBackGround"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/backGround0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splashImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:scaleType="fitXY"
            android:src="@mipmap/q_chat"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/splashAppName"
            style="@style/splashText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/splashGuide1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:padding="5dp"
            style="@style/splashGuide"
            android:text="@string/make_friends_with_your_neighbour" />


        <TextView
            android:id="@+id/splashGuide2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:padding="5dp"
            style="@style/splashGuide"
            android:text="@string/meet_people_whole_the_world" />

        <TextView
            android:id="@+id/splashGuide3"
            style="@style/splashGuide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/and_easily_chatting_with" />


    </LinearLayout>




</RelativeLayout>