<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround0"
    tools:context=".ui.Registration.View.Login">

    <androidx.cardview.widget.CardView
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backGround0"
        app:cardCornerRadius="0dp"
        app:cardElevation="30dp">


        <RelativeLayout
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:padding="8dp"
            android:background="@color/backGround0"
            android:layout_alignParentTop="true"
            tools:ignore="UselessParent">


            <ImageView
                android:visibility="gone"
                android:id="@+id/ivBackRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@drawable/ic_back_24dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                tools:ignore="ContentDescription"
                android:layout_alignParentLeft="true" />

            <TextView
                style="@style/headLineText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        android:layout_below="@id/topBar"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/headLineText"
            android:id="@+id/dsad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_to_your" />

        <TextView
            style="@style/headLineText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/account" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backGround0"
            android:orientation="vertical"
            tools:ignore="UselessLeaf,UselessParent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:background="@drawable/rounded_shape"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    app:hintEnabled="true"
                    android:hint="@string/enter_your_e_mail"
                    android:textColorHint="@color/white"
                    app:expandedHintEnabled="true"
                    app:hintAnimationEnabled="true"
                    tools:ignore="RtlSymmetry"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmailLogin"
                        android:background="@drawable/rounded_shape"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        style="@style/smallTextData"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:background="@drawable/rounded_shape"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:hint="@string/enter_your_password"
                    android:textColorHint="@color/white"
                    app:expandedHintEnabled="true"
                    app:hintAnimationEnabled="true"
                    android:paddingLeft="8dp"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/white"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordLogin"
                        android:background="@drawable/rounded_shape"
                        android:layout_width="match_parent"
                        style="@style/smallTextData"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/btnLogin"
                    style="@style/RippleStyleGrey"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/login"
                        style="@style/buttonTextStyle"/>


                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                style="@style/smallText"
                android:text="@string/forget_your_password"
                android:gravity="center"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/RippleStyleGrey">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sign_up"
                        style="@style/buttonTextStyle" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/smallText"
                android:text="@string/signup_if_you_don_t_have_an_account"
                android:gravity="center"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"/>

</RelativeLayout>